# nm-wifi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
src/: app.rs  app_state.rs  backend.rs  demo_screenshots.rs  lib.rs  main.rs  network.rs  theme.rs  types.rs  ui.rs  wifi.rs
src/app/: runtime.rs
src/demo_screenshots/: render.rs  scenarios.rs  svg.rs  writer.rs
src/network/: demo.rs  networkmanager.rs
src/ui/: format.rs  header_footer.rs  list.rs  modals.rs  screen.rs
tests/: app_runtime.rs  backend_factory.rs  core_modules.rs  demo_screenshots.rs  fake_backend.rs
