[package]
name = "nm-wifi"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Terminal User Interface for managing Wi-Fi connections on Linux"

[features]
default = []
demo = []

[[bin]]
name = "generate-demo-screenshots"
path = "src/bin/generate_demo_screenshots.rs"
required-features = ["demo"]

[dependencies]
networkmanager = "0.5"
ratatui = "0.29"
crossterm = "0.28.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
dbus = "0.9.7"
unicode-width = "0.2"
